# z2p2

./: Cargo.toml
.github/workflows/: general.yml
scripts/: init_db.ps1  init_db.sh
src/: config.rs  lib.rs  main.rs  routes.rs  trace.rs  tracing.rs
src/domain/: mod.rs  subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscribe.rs
tests/: common.rs  health_check.rs  subscribe.rs
