[package]
name = "zero2prod2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.11"
chrono = "0.4.15"
config = "0.13.1"
serde = { version = "1.0.138", features = ["derive"] }
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.1.2", features = ["v4"] }
tracing = "0.1.35"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["trace"] }
tracing-subscriber = { version = "0.3.14", features = ["std", "fmt"] }
secrecy = { version = "0.8.0", features = ["serde"] }

[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.11.11"
